# pkm-cli

./: .gitignore  Cargo.toml  cspell.json  debug-pkm  lsp-backup.rs
src/: editor.rs  error.rs  finder.rs  image.rs  lib.rs  lsp.rs  markdown.rs  pkm.rs  schema.rs  syntax.rs  zettel.rs  zettel_index.rs  zettel_path.rs
src/lsp/: error.rs  mod.rs  notification.rs  request.rs  response.rs  runner_standard.rs  virtual_file.rs
templates/: helpers.md
templates/zettel/: daily_zettel.md  default_zettel.md
