[package]
name = "pkm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pkm"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive", "env"] }
convert_case = "0.8.0"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
lsp-types = "0.97.0"
markdown = "1.0.0"
serde = "1.0.219"
serde_json = "1.0.142"
sha1 = "0.10.6"
skim = "0.20.5"
tantivy = "0.24.2"
tera = "1.20.0"
thiserror = "2.0.12"
walkdir = "2.5.0"
