[package]
name = "pkm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pkm"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive", "env", ] }
clap_complete = {version = "4.5.57", features = ["unstable-dynamic"]}
convert_case = "0.8.0"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
fluent-uri = "0.3.2"
hex = "0.4.3"
human-date-parser = "0.3.1"
image = "0.25.6"
inquire = "0.7.5"
log = "0.4.27"
lsp-types = "0.97.0"
markdown = "1.0.0"
mdast_util_to_markdown = "0.0.2"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["raw_value"] }
sha1 = "0.10.6"
skim = "0.20.5"
syntect = "5.2.0"
tantivy = "0.24.2"
tera = "1.20.0"
thiserror = "2.0.12"
walkdir = "2.5.0"
